[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scripts/Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Exo2.tres" type="DynamicFont" id=2]

[node name="PauseMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="Bg" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.219608, 0.227451, 0.286275, 0.184314 )

[node name="Panel" type="Panel" parent="."]
visible = false
margin_right = 400.0
margin_bottom = 1080.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
margin_right = 375.0
margin_bottom = 1080.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 56.0
margin_top = 236.0
margin_right = 318.0
margin_bottom = 844.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Save" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 262.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 2 )
text = "Save"

[node name="Load" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 262.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 2 )
text = "Load"

[node name="Options" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 262.0
margin_bottom = 436.0
custom_fonts/font = ExtResource( 2 )
text = "Options"

[node name="Quit" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 516.0
margin_right = 262.0
margin_bottom = 608.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"

[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Save" to="." method="_on_Save_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Load" to="." method="_on_Load_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Quit" to="." method="_on_Quit_button_down"]
